--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,17 @@
 version: '3'
 services:
+#  api:
+#    build: '.'
+#    ports:
+#      - '8080:8080'
+#    depends_on:
+#      - 'mongo'
   mongodb:
-    image: mongo:3.6
+    image: mongo:latest
     container_name: "mongodb"
     volumes:
-      - ./data/db:/data/db
+      - mongodata:/data/db
     ports:
       - 27017:27017
-    command: mongod --smallfiles --logpath=/dev/null # --quiet
-      #  api:
-      #    build: '.'
-      #    ports:
-#      - '8080:8080'
-  #    depends_on:
-  #      - 'mongo'
+volumes:
+  mongodata:
