--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,11 @@
 version: '3'
 services:
-#  api:
-#    build: '.'
-#    ports:
-#      - '8080:8080'
-#    depends_on:
-#      - 'mongo'
+  api:
+    build: '.'
+    ports:
+      - '8080:8080'
+    depends_on:
+      - 'mongo'
   mongodb:
     image: mongo:latest
     container_name: "mongodb"
